@startuml

title __BUSINESS's Class Diagram__\n

  namespace wasteless.server {
    namespace business {
      class wasteless.server.business.ExportService {
          + ExportService()
          + exportJsonWasteReport()
          + exportTextWasteReport()
          - getReportGenerator()
      }
    }
  }
  

  namespace wasteless.server {
    namespace business {
      class wasteless.server.business.WasteManagerService {
          - support : PropertyChangeSupport
          + WasteManagerService()
          + addPropertyChangeListener()
          + computeWasteDTO()
          + notifyWasteLevels()
          + removePropertyChangeListener()
          - getTotalCalories()
      }
    }
  }
  

  wasteless.server.business.ExportService o-- wasteless.server.export.factory.FactoryProvider : factoryProvider
  wasteless.server.business.WasteManagerService o-- wasteless.server.business.query_service.GroceryListQueryService : groceryListQueryService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
